# GMM

./: CMakeLists.txt  GMM.cpp  GMM.h  main.cpp
